==========
03/08/2009
==========

- Correcoes na exibicao de Quota para Blogs e Feeds
- Inclusao de Aba para visualizacao de Quota no profile/edit
- Atualizacao da documentacao dos webservices do frontend, inclusao de flags
responsaveis pelo multi-task

HORAS TRABALHADAS: 3h

==========
11/08/2009
==========

- Recorte layout frontend

HORAS TRABALHADAS: 4h

==========
12/08/2009
==========

- Recorte layout frontend

HORAS TRABALHADAS: 7h

==========
13/08/2009
==========

- Recorte layout frontend

HORAS TRABALHADAS: 9h

==========
14/08/2009
==========

- Recorte layout frontend

HORAS TRABALHADAS: 10h

==========
15/08/2009
==========

- Recorte layout frontend

HORAS TRABALHADAS: 8h

==========
16/08/2009
==========

- Implementação layout frontend

HORAS TRABALHADAS: 4h