@@ -56,3 +56,11 @@ HORAS TRABALHADAS: 8h
 - Implementação layout frontend
 
 HORAS TRABALHADAS: 4h
+
+==========
+18/08/2009
+==========
+
+- testes e implementacao de video tour com OVP
+
+HORAS TRABALHADAS: 3h
